app-test/testdata/typesystem/neg/tuple-type-element-access/check/tuple2.check
Error in "testdata/typesystem/neg/tuple-type-element-access/src/tuple.cal" on line 6:
            OUT <-- a.#3;
                    ^^^^
No member #3 for (int, bool).